# sesh

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  IMPLEMENTATION_PLAN.md  README.md  README.rust.md  TESTING.md  Taskfile.yaml  coverage.out  flake.nix  go.mod  go.sum  main.go
.claude/: settings.json
.claude/hooks/: on-project-open.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmd/: clean.go  clone.go  completions.go  delete.go  edit.go  fetch.go  info.go  list.go  list_test.go  pop.go  root.go  status.go  status_test.go  switch.go  switch_test.go  tmux.go  version.go
docs/: configuration.md  testing.md  tmux-integration.md
integration/: clone_test.go  delete_test.go  integration_test.go  list_test.go  mock_session_manager.go  pop_test.go  switch_test.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  migrations.go
internal/display/: display.go  display_test.go
internal/fuzzy/: fuzzy.go  fuzzy_test.go
internal/git/: branch.go  branch_test.go  clone.go  clone_test.go  worktree.go
internal/models/: models.go  models_test.go
internal/pr/: github.go  provider.go
internal/project/: project.go  project_test.go
internal/session/: editor.go  editor_test.go  manager.go  manager_test.go  screen.go  screen_test.go  tmux.go  zellij.go  zellij_test.go
internal/state/: state.go
internal/tty/: tty.go  tty_test.go
migrations/: 001_initial.sql
scripts/: e2e-test.sh  release.sh
src/: error.rs  lib.rs  logging.rs  main.rs
tests/: config_validation.rs
(+42 files in other folders)
